# chaos-box

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  justfile  noxfile.py  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml  pypi-publish.yaml
src/chaos_box/: tarfile.py  utils.py
src/chaos_box/cmd/: apt_lists.py  archive_dirs.py  archive_mobi.py  date_rename.py  deb_extract.py  enc_recover.py  halfwidth.py  iconv8.py  iconv_utf8.py  ifstats.py  ipmerge.py  pascal.py  prime.py  qbt_dump.py  qbt_migrate.py  qbt_tracker.py  qrcode_merge.py  qrcode_split.py  rename_with_date.py  rotate_images.py  shasum_list.py  sort_keys.py
src/miscbox/: deb_extract.py  rotate_images.py
src/miscbox/cmd/: archive_dirs.py  archive_mobi.py  deb_extract.py  dir_archive.py  qbt_dump.py  qbt_migrate.py  qrcode_merge.py  qrcode_split.py  rotate_images.py  shasum_list.py
tests/: test_date_rename.py  test_gitignore.py  test_halfwidth.py  test_ipmerge.py  test_pascal.py  test_prime.py  test_qbt_dump.py  test_tarfile.py
