[project]
name = "miscbox"
dynamic = ["version"]
description = "Collection of handy utils written by Python 3"
authors = [
    {name = "ak1ra", email = "git@ak1ra.xyz"},
]
dependencies = []
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
]
keywords = []
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/ak1ra-lab/miscbox"
Issues = "https://github.com/ak1ra-lab/miscbox/issues"
Changelog = "https://github.com/ak1ra-lab/miscbox/blob/master/CHANGELOG.md"


[project.scripts]
miscbox = "miscbox.main:main"


# All development dependencies are included as long as --prod is not passed and -G doesn't specify any dev groups.

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"



[dependency-groups]
tests = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.9.4",
]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    "nox>=2024.10.9",
    "pre-commit>=4.2.0",
]
